Fixed align in tanks component simple view

--- a/projects/planner/src/app/tanks/tanks.component.scss
+++ b/projects/planner/src/app/tanks/tanks.component.scss
@@ -1,1 +1,3 @@
-
+#oxygen-input {
+    min-width: 190px;
+}
