--- a/projects/planner/src/styles.scss
+++ b/projects/planner/src/styles.scss
@@ -14,5 +14,5 @@ $success: #2E7D32 !default;
 }
 
 input.form-control, mdb-form-control {
-    max-width: 170px;
+    max-width: 200px;
 }
